# standardSDLGame

./: CMakeLists.txt  README.md  h1.c
src/: CMakeLists.txt  game.c  game.h  input.c  main.c
